--- a/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
@@ -1,18 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows</TargetFrameworks>
+    <UseWPF>true</UseWPF>
 		<RootNamespace>_4thIR.DocClassify.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.DocClassify.Activities.Design</AssemblyName>
-    <PackageId>4th-IR.DocumentClassificationKYC.Activity.DocumentClassification</PackageId>
+    <PackageId>_4thIR.DocClassify.Activities</PackageId>
+    <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path Activity for classifying documents (KYC Document Classifier).</Description>
-    <Authors>Ato Toffah</Authors>
-    <Company>4th-IR</Company>
-    <Copyright>© 2022 4th-IR</Copyright>
+    <Description>This package was generated using the UiPath VS Extension.</Description>
+    <Authors>Company</Authors>
+    <Company>Company</Company>
+    <Copyright>© 2022 Company</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
     <PackageProjectUrl>https://docs.uipath.com/integrations/docs/how-to-create-activities</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
@@ -27,17 +29,10 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.2.1</PackageVersion>
+    <PackageVersion>0.1.0</PackageVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Designers\DocumentClassificationDesigner.xaml" />
-  </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\Logo\logo2.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
     <None Include="packageIcon.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
@@ -57,23 +52,16 @@
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.DocClassify.Activities.Design.xml</DocumentationFile>
-    <Title>Document Classification</Title>
-    <PackageIcon>logo2.png</PackageIcon>
-    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.DocumentClassification.git</RepositoryUrl>
   </PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
-		<PackageReference Include="System.Activities.Core.Presentation" Version="6.0.0-*" PrivateAssets="All" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
+    <PackageReference Include="System.Activities.Core.Presentation" Version="6.0.0-*" PrivateAssets="All" />
+  </ItemGroup>
   <ItemGroup>
     <Page Include="..\..\Shared\Themes\Generic.xaml">
       <Link>Themes\Generic.xaml</Link>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Page>
-    <Page Include="Designers\DocumentClassificationDesigner.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Themes\Icons.xaml">
@@ -83,7 +71,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.DocClassify.Activities\_4thIR.DocClassify.Activities.csproj" PrivateAssets="All" />
+    <ProjectReference Include="..\_4thIR.DocClassify.Activities\_4thIR.DocClassify.Activities.csproj" PrivateAssets="All"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Designers\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
