--- a/4thIR.DocClassify/_4thIR.DocClassify.Activities/_4thIR.DocClassify.Activities.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify.Activities/_4thIR.DocClassify.Activities.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.DocClassify.Activities</RootNamespace>
@@ -9,12 +9,12 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.DocClassify.Activities.xml</DocumentationFile>
   </PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
-		<PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
-	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.DocClassify\_4thIR.DocClassify.csproj" PrivateAssets="All" />
+    <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
+    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\_4thIR.DocClassify\_4thIR.DocClassify.csproj" PrivateAssets="All"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -31,6 +31,9 @@
     <EmbeddedResource Update="Properties\Resources.*.resx">
       <DependentUpon>Resources.resx</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="..\..\Shared\UiPath.Shared.Activities\UiPath.Shared.Activities.projitems" Label="Shared" />
 </Project>
