--- a/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
+++ b/4thIR.DocClassify/_4thIR.DocClassify.Activities.Design/_4thIR.DocClassify.Activities.Design.csproj
@@ -4,19 +4,19 @@
     <UseWPF>true</UseWPF>
 		<RootNamespace>_4thIR.DocClassify.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.DocClassify.Activities.Design</AssemblyName>
-    <PackageId>_4thIR.DocClassify.Activities</PackageId>
+    <PackageId>4thIR.DocumentClassification.KYC.Activity.DocumentClassification</PackageId>
     <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>This package was generated using the UiPath VS Extension.</Description>
-    <Authors>Company</Authors>
-    <Company>Company</Company>
-    <Copyright>© 2022 Company</Copyright>
+    <Description>UI Path Activity for Document Classification. (KYC Document Classifier)</Description>
+    <Authors>Ato Toffah</Authors>
+    <Company>4th-IR</Company>
+    <Copyright>© 2022 4th-IR</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
-    <PackageProjectUrl>https://docs.uipath.com/integrations/docs/how-to-create-activities</PackageProjectUrl>
+    <PackageProjectUrl>https://www.4th-ir.com</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
     <!--<PackageIcon>packageIcon.png</PackageIcon>--> <!--PackageIcon not yet supported in UiPath Studio-->
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
@@ -29,13 +29,17 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.3.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\DocumentClassificationDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
+    <None Include="..\..\Logo\logo2.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="packageIcon.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
@@ -55,6 +59,9 @@
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.DocClassify.Activities.Design.xml</DocumentationFile>
+    <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.DocumentClassification.git</RepositoryUrl>
+    <Title>Document Classifier</Title>
+    <PackageIcon>logo2.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
