--- a/4thIR.TextTranslation/_4thIR.TextTranslation.Activities.Design/_4thIR.TextTranslation.Activities.Design.csproj
+++ b/4thIR.TextTranslation/_4thIR.TextTranslation.Activities.Design/_4thIR.TextTranslation.Activities.Design.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
 		<RootNamespace>_4thIR.TextTranslation.Activities.Design</RootNamespace>
 		<AssemblyName>_4thIR.TextTranslation.Activities.Design</AssemblyName>
     <PackageId>4th-IR.TextTranslationTMultilanguage.Activity.Translation</PackageId>
+	<EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
@@ -27,7 +28,7 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.2.0</PackageVersion>
+    <PackageVersion>0.3.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\TranslationDesigner.xaml" />
@@ -62,21 +63,9 @@
     <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.TextTranslation.git</RepositoryUrl>
   </PropertyGroup>
 	<ItemGroup>
-		<Reference Include="System" />
-    <Reference Include="System.Core" />
-		<Reference Include="System.Xml.Linq" />
-		<Reference Include="System.Data.DataSetExtensions" />
-		<Reference Include="Microsoft.CSharp" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-		<Reference Include="System.Data" />
-		<Reference Include="System.Xml" />
-    <Reference Include="System.Activities" />
-    <Reference Include="System.Activities.Presentation" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="System.Activities.Core.Presentation" />
-  </ItemGroup>
+		<PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
+		<PackageReference Include="System.Activities.Core.Presentation" Version="6.0.0-*" PrivateAssets="All" />
+	</ItemGroup>
   <ItemGroup>
     <Page Include="..\..\Shared\Themes\Generic.xaml">
       <Link>Themes\Generic.xaml</Link>
