--- a/4thIR.QAnsweringRBS2/_4thIR.QAnsweringRBS2.Activities/_4thIR.QAnsweringRBS2.Activities.csproj
+++ b/4thIR.QAnsweringRBS2/_4thIR.QAnsweringRBS2.Activities/_4thIR.QAnsweringRBS2.Activities.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.QAnsweringRBS2.Activities</RootNamespace>
 		<AssemblyName>_4thIR.QAnsweringRBS2.Activities</AssemblyName>
     <PackageId>_4thIR.QAnsweringRBS2.Activities.Implementation</PackageId>
@@ -9,23 +9,10 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.QAnsweringRBS2.Activities.xml</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-		<Reference Include="System" />
-
-		<Reference Include="System.Core" />
-		<Reference Include="System.Xml.Linq" />
-		<Reference Include="System.Data.DataSetExtensions" />
-
-
-		<Reference Include="Microsoft.CSharp" />
-
-		<Reference Include="System.Data" />
-		<Reference Include="System.Xml" />
-		<Reference Include="System.Activities" />
-		<Reference Include="System.Windows" />
-		<Reference Include="System.Xaml" />
-		<Reference Include="WindowsBase" />
-	</ItemGroup>
+ <ItemGroup>
+    <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
+    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\_4thIR.QAnsweringRBS2\_4thIR.QAnsweringRBS2.csproj" PrivateAssets="All" />
   </ItemGroup>
