--- a/4thIR.QAnsweringCUAD/_4thIR.QAnsweringCUAD.Activities/_4thIR.QAnsweringCUAD.Activities.csproj
+++ b/4thIR.QAnsweringCUAD/_4thIR.QAnsweringCUAD.Activities/_4thIR.QAnsweringCUAD.Activities.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.QAnsweringCUAD.Activities</RootNamespace>
 		<AssemblyName>_4thIR.QAnsweringCUAD.Activities</AssemblyName>
     <PackageId>_4thIR.QAnsweringCUAD.Activities.Implementation</PackageId>
@@ -10,21 +10,8 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.QAnsweringCUAD.Activities.xml</DocumentationFile>
   </PropertyGroup>
 	<ItemGroup>
-		<Reference Include="System" />
-
-		<Reference Include="System.Core" />
-		<Reference Include="System.Xml.Linq" />
-		<Reference Include="System.Data.DataSetExtensions" />
-
-
-		<Reference Include="Microsoft.CSharp" />
-
-		<Reference Include="System.Data" />
-		<Reference Include="System.Xml" />
-		<Reference Include="System.Activities" />
-		<Reference Include="System.Windows" />
-		<Reference Include="System.Xaml" />
-		<Reference Include="WindowsBase" />
+		<PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
+		<PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\_4thIR.QAnsweringCUAD\_4thIR.QAnsweringCUAD.csproj" PrivateAssets="All" />
