--- a/4thIR.ObjectDetectFR/_4thIR.ObjectDetectFR.Activities.Design/_4thIR.ObjectDetectFR.Activities.Design.csproj
+++ b/4thIR.ObjectDetectFR/_4thIR.ObjectDetectFR.Activities.Design/_4thIR.ObjectDetectFR.Activities.Design.csproj
@@ -16,7 +16,7 @@
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
-    <PackageProjectUrl>https://www.4th-IR.com</PackageProjectUrl>
+    <PackageProjectUrl>https://www.4th-ir.com</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
     <!--<PackageIcon>packageIcon.png</PackageIcon>--> <!--PackageIcon not yet supported in UiPath Studio-->
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
@@ -29,7 +29,7 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.1.1</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\ObjectDetectionDesigner.xaml" />
