--- a/4thIR.HwrittenRecOV/_4thIR.HwrittenRecOV.Activities.Design/_4thIR.HwrittenRecOV.Activities.Design.csproj
+++ b/4thIR.HwrittenRecOV/_4thIR.HwrittenRecOV.Activities.Design/_4thIR.HwrittenRecOV.Activities.Design.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path activity for handwritten word recognition. (Handwritten Recognition Openvino)</Description>
+    <Description>UI Path activity for handwritten text recognition. (Handwritten Recognition Openvino)</Description>
     <Authors>Ato Toffah</Authors>
     <Company>4th-IR</Company>
     <Copyright>© 2022 4th-IR</Copyright>
@@ -29,7 +29,7 @@
     <PackageVersion>0.1.0.$([System.DateTime]::UtcNow.ToString(MMddHHmmss))</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.1.1</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\HandwrittenRecognitionDesigner.xaml" />
@@ -59,7 +59,7 @@
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\_4thIR.HwrittenRecOV.Activities.Design.xml</DocumentationFile>
-    <Title>Handwritten Word Recognition</Title>
+    <Title>Handwritten Text Recognition</Title>
     <PackageIcon>logo2.png</PackageIcon>
     <RepositoryUrl>https://github.com/UnfetteredScholar/4thIR.Handwritten-Recognition-Openvino.git</RepositoryUrl>
   </PropertyGroup>
