--- a/4thIR.QAnswerLA/_4thIR.QAnswerLA/_4thIR.QAnswerLA.csproj
+++ b/4thIR.QAnswerLA/_4thIR.QAnswerLA/_4thIR.QAnswerLA.csproj
@@ -29,4 +29,7 @@
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
 </Project>
