--- a/Image_Classification_Swin_Large/4thIR.ImageClassificationSL/_4thIR.ImageClassificationSL.Activities/_4thIR.ImageClassificationSL.Activities.csproj
+++ b/Image_Classification_Swin_Large/4thIR.ImageClassificationSL/_4thIR.ImageClassificationSL.Activities/_4thIR.ImageClassificationSL.Activities.csproj
@@ -10,11 +10,12 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.ImageClassificationSL.Activities.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="4thIR.ProcessScope.Implementation" Version="1.0.0" />
     <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
-    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
+    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.ImageClassificationSL\_4thIR.ImageClassificationSL.csproj" PrivateAssets="All"/>
+    <ProjectReference Include="..\_4thIR.ImageClassificationSL\_4thIR.ImageClassificationSL.csproj" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -31,9 +32,6 @@
     <EmbeddedResource Update="Properties\Resources.*.resx">
       <DependentUpon>Resources.resx</DependentUpon>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="..\..\Shared\UiPath.Shared.Activities\UiPath.Shared.Activities.projitems" Label="Shared" />
 </Project>
