--- a/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.TextParaphraseComparer/_4thIR.TextParaphraseComparer.Activities/_4thIR.TextParaphraseComparer.Activities.csproj
+++ b/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.TextParaphraseComparer/_4thIR.TextParaphraseComparer.Activities/_4thIR.TextParaphraseComparer.Activities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4thIR.TextParaphraseComparer.Activities</RootNamespace>
@@ -10,11 +10,12 @@
     <DocumentationFile>bin\$(Configuration)\_4thIR.TextParaphraseComparer.Activities.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="4thIR.ProcessScope.Implementation" Version="1.0.0" />
     <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All" />
-    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All"/>
+    <PackageReference Include="UiPath.Workflow.Runtime" Version="6.0.0-20220909-01" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.TextParaphraseComparer\_4thIR.TextParaphraseComparer.csproj" PrivateAssets="All"/>
+    <ProjectReference Include="..\_4thIR.TextParaphraseComparer\_4thIR.TextParaphraseComparer.csproj" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -31,9 +32,6 @@
     <EmbeddedResource Update="Properties\Resources.*.resx">
       <DependentUpon>Resources.resx</DependentUpon>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Activities\" />
   </ItemGroup>
   <Import Project="..\..\Shared\UiPath.Shared.Activities\UiPath.Shared.Activities.projitems" Label="Shared" />
 </Project>
