--- a/Image_Classification_ViT_Base/4th_IR.Image_Classification/_4th_IR.Image_Classification/_4th_IR.Image_Classification.csproj
+++ b/Image_Classification_ViT_Base/4th_IR.Image_Classification/_4th_IR.Image_Classification/_4th_IR.Image_Classification.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>_4th_IR.Image_Classification</RootNamespace>
