--- a/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB.Activities.Design/_4thIR.SentenceTransformMB.Activities.Design.csproj
+++ b/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB.Activities.Design/_4thIR.SentenceTransformMB.Activities.Design.csproj
@@ -2,21 +2,21 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
-		<RootNamespace>_4thIR.TextParaphraseComparer.Activities.Design</RootNamespace>
-		<AssemblyName>_4thIR.TextParaphraseComparer.Activities.Design</AssemblyName>
-    <PackageId>4thIR.SentenceTransformerMiniLMBaseV2.Activity.SentenceSimilarity</PackageId>
+		<RootNamespace>_4thIR.SentenceTransformMB.Activities.Design</RootNamespace>
+		<AssemblyName>_4thIR.SentenceTransformMB.Activities.Design</AssemblyName>
+    <PackageId>_4thIR.SentenceTransformMB.Activities</PackageId>
     <EnableDefaultPageItems>false</EnableDefaultPageItems>
   </PropertyGroup>
   <!-- Package Metadata -->
   <PropertyGroup>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <Description>UI Path Activity for comparing sentences. (Sentence Transformer - MiniLM Base V2 (Sentence Similarity))</Description>
-    <Authors>Ato Toffah</Authors>
-    <Company>4th-IR</Company>
-    <Copyright>© 2022 4th-IR</Copyright>
+    <Description>This package was generated using the UiPath VS Extension.</Description>
+    <Authors>Company</Authors>
+    <Company>Company</Company>
+    <Copyright>© 2022 Company</Copyright>
     <PackageTags>UiPath Activit𝗒</PackageTags>
-    <PackageProjectUrl>https://www.4th-ir.com</PackageProjectUrl>
+    <PackageProjectUrl>https://docs.uipath.com/integrations/docs/how-to-create-activities</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Samples/master/PackageIconNuspecExample/icon.png</PackageIconUrl>
     <!--<PackageIcon>packageIcon.png</PackageIcon>--> <!--PackageIcon not yet supported in UiPath Studio-->
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
@@ -31,15 +31,8 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <PackageVersion>0.1.0</PackageVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Designers\TextComparisonDesigner.xaml" />
-  </ItemGroup>
   <!-- Package Icon -->
   <ItemGroup>
-    <None Include="..\..\..\4th-IR Logo\logo2.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
     <None Include="packageIcon.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
@@ -58,10 +51,7 @@
   </Target>
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
-    <DocumentationFile>bin\$(Configuration)\_4thIR.TextParaphraseComparer.Activities.Design.xml</DocumentationFile>
-    <Title>Text Comparison- Sentence Similarity</Title>
-    <PackageIcon>logo2.png</PackageIcon>
-    <RepositoryUrl>https://github.com/UnfetteredScholar/4th-IR-Activities.git</RepositoryUrl>
+    <DocumentationFile>bin\$(Configuration)\_4thIR.SentenceTransformMB.Activities.Design.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="UiPath.Workflow" Version="6.0.0-20220909-01" PrivateAssets="All" />
@@ -74,9 +64,6 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
-    <Page Include="Designers\TextComparisonDesigner.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </Page>
     <Page Include="Themes\Icons.xaml">
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
@@ -84,7 +71,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\_4thIR.TextParaphraseComparer.Activities\_4thIR.TextParaphraseComparer.Activities.csproj" PrivateAssets="All" />
+    <ProjectReference Include="..\_4thIR.SentenceTransformMB.Activities\_4thIR.SentenceTransformMB.Activities.csproj" PrivateAssets="All"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Designers\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
