--- a/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB.csproj
+++ b/Sentence_Transformer_MiniLM_Base_V2_Sentence_Similarity/4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB/_4thIR.SentenceTransformMB.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
-		<RootNamespace>_4thIR.TextParaphraseComparer</RootNamespace>
-		<AssemblyName>_4thIR.TextParaphraseComparer</AssemblyName>
+		<RootNamespace>_4thIR.SentenceTransformMB</RootNamespace>
+		<AssemblyName>_4thIR.SentenceTransformMB</AssemblyName>
   </PropertyGroup>
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
-    <DocumentationFile>bin\$(Configuration)\_4thIR.TextParaphraseComparer.xml</DocumentationFile>
+    <DocumentationFile>bin\$(Configuration)\_4thIR.SentenceTransformMB.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -25,6 +25,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Contracts\" />
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
   </ItemGroup>
