--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -32,6 +32,7 @@
     <PackageVersion>0.1.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Designers\DocumentClassificationKYCDesigner.xaml" />
     <None Remove="Designers\ProcessScopeDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
@@ -66,6 +67,9 @@
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\DocumentClassificationKYCDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\ProcessScopeDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
