--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom/_4thIR.Custom.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom/_4thIR.Custom.csproj
@@ -28,4 +28,7 @@
     <Folder Include="Enums\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
 </Project>
